# vmware-view-open-client

./: Info.plist.in  Makefile.am  Makefile.in  Makefile.inc  README.txt  VMware-view-open-client.control.in  VMware-view-open-client.spec.in  aclocal.m4  app.cc  app.hh  baseApp.cc  baseApp.hh  baseXml.cc  baseXml.hh  broker.cc  broker.hh  brokerDlg.cc  brokerDlg.hh  brokerXml.cc  brokerXml.hh  buildNumber.h.in  cdkErrors.h  cdkProxy.c  cdkProxy.h  cdkProxyDarwin.c  cdkUrl.c  cdkUrl.h  configure  configure.ac  cryptoki.cc  cryptoki.hh  desktop.cc  desktop.hh  desktopSelectDlg.cc  desktopSelectDlg.hh  disclaimerDlg.cc  disclaimerDlg.hh  dlg.cc  dlg.hh  extraTranslations.hh  (+40 more)
.pc/: applied-patches
.pc/01-doc-pdf.patch/: Makefile.in
.pc/01-doc-pdf.patch/doc/: Makefile.inc
.pc/02-binutils-gold.patch/: Makefile.in
cocoa/: Makefile.inc  app.hh  app.m  brokerAdapter.hh  brokerAdapter.m  cdkAppController.h  cdkAppController.m  cdkBroker.h  cdkBroker.m  cdkBrokerAddress.h  cdkBrokerAddress.m  cdkBrokerViewController.h  cdkBrokerViewController.m  cdkChangePinCreds.h  cdkChangePinCredsViewController.h  cdkChangePinCredsViewController.m  cdkChangeWinCreds.h  cdkChangeWinCredsViewController.h  cdkChangeWinCredsViewController.m  cdkConfirmPinCreds.h  cdkConfirmPinCredsViewController.h  cdkConfirmPinCredsViewController.m  cdkCreds.h  cdkCreds.m  cdkDebugAssert.c  cdkDebugAssert.h  cdkDesktop.h  cdkDesktop.m  cdkDesktopCell.h  cdkDesktopCell.m  cdkDesktopFormatter.h  cdkDesktopFormatter.m  cdkDesktopSize.h  cdkDesktopSize.m  cdkDesktopSizesWindowController.h  cdkDesktopSizesWindowController.m  cdkDesktopsViewController.h  cdkDesktopsViewController.m  cdkDisclaimer.h  cdkDisclaimer.m  (+30 more)
cocoa/English.lproj/: Credits.html  InfoPlist.strings
cocoa/English.lproj/BrokerView.nib/: designable.nib  keyedobjects.nib
cocoa/English.lproj/ChangePinCredsView.nib/: designable.nib  keyedobjects.nib
cocoa/English.lproj/ChangeWinCredsView.nib/: designable.nib  keyedobjects.nib
cocoa/English.lproj/ConfirmPinCredsView.nib/: designable.nib  keyedobjects.nib
cocoa/English.lproj/DesktopSizesWindow.nib/: designable.nib  keyedobjects.nib
cocoa/English.lproj/DesktopsView.nib/: designable.nib  keyedobjects.nib
cocoa/English.lproj/DisclaimerView.nib/: designable.nib  keyedobjects.nib
cocoa/English.lproj/MainMenu.nib/: designable.nib  keyedobjects.nib
cocoa/English.lproj/MainWindow.nib/: designable.nib  keyedobjects.nib
cocoa/English.lproj/PasscodeCredsView.nib/: designable.nib  keyedobjects.nib
cocoa/English.lproj/TokencodeCredsView.nib/: designable.nib  keyedobjects.nib
cocoa/English.lproj/WaitingView.nib/: designable.nib  keyedobjects.nib
cocoa/English.lproj/WinCredsView.nib/: designable.nib  keyedobjects.nib
cocoa/French.lproj/: Credits.html  InfoPlist.strings
cocoa/French.lproj/BrokerView.nib/: designable.nib  keyedobjects.nib
cocoa/French.lproj/ChangePinCredsView.nib/: designable.nib  keyedobjects.nib
cocoa/French.lproj/ChangeWinCredsView.nib/: designable.nib  keyedobjects.nib
cocoa/French.lproj/ConfirmPinCredsView.nib/: designable.nib  keyedobjects.nib
cocoa/French.lproj/DesktopSizesWindow.nib/: designable.nib  keyedobjects.nib
cocoa/French.lproj/DesktopsView.nib/: designable.nib  keyedobjects.nib
cocoa/French.lproj/DisclaimerView.nib/: designable.nib  keyedobjects.nib
cocoa/French.lproj/MainMenu.nib/: designable.nib  keyedobjects.nib
cocoa/French.lproj/MainWindow.nib/: designable.nib  keyedobjects.nib
cocoa/French.lproj/PasscodeCredsView.nib/: designable.nib  keyedobjects.nib
cocoa/French.lproj/TokencodeCredsView.nib/: designable.nib  keyedobjects.nib
cocoa/French.lproj/WaitingView.nib/: designable.nib  keyedobjects.nib
cocoa/French.lproj/WinCredsView.nib/: designable.nib  keyedobjects.nib
cocoa/German.lproj/: Credits.html  InfoPlist.strings
cocoa/German.lproj/BrokerView.nib/: designable.nib  keyedobjects.nib
cocoa/German.lproj/ChangePinCredsView.nib/: designable.nib  keyedobjects.nib
cocoa/German.lproj/ChangeWinCredsView.nib/: designable.nib  keyedobjects.nib
cocoa/German.lproj/ConfirmPinCredsView.nib/: designable.nib  keyedobjects.nib
cocoa/German.lproj/DesktopSizesWindow.nib/: designable.nib  keyedobjects.nib
cocoa/German.lproj/DesktopsView.nib/: designable.nib  keyedobjects.nib
cocoa/German.lproj/DisclaimerView.nib/: designable.nib  keyedobjects.nib
cocoa/German.lproj/MainMenu.nib/: designable.nib  keyedobjects.nib
cocoa/German.lproj/MainWindow.nib/: designable.nib  keyedobjects.nib
cocoa/Japanese.lproj/: Credits.html  InfoPlist.strings
cocoa/zh-Hans.lproj/: Credits.html  InfoPlist.strings
cvp/: Makefile.inc
debian/: changelog  control  copyright  rules
debian/manpages/: vmware-view-log-collector.1
debian/patches/: 01-doc-pdf.patch  02-binutils-gold.patch  03-curl-include.patch  series
doc/: Makefile.inc  copyright.Debian  open_source_licenses.txt  vmware-view-tunnel.1  vmware-view-tunnel.1.in  vmware-view.1  vmware-view.1.in
doc/help/: integrated_help-de.txt  integrated_help-en.txt  integrated_help-fr.txt  integrated_help-ja.txt  integrated_help-zh_CN.txt
doc/help/de/: connect.txt  list.txt
gtk/: Makefile.inc  app.cc  app.hh  brokerDlg.cc  brokerDlg.hh  certViewer.hh  cryptoki.cc  cryptoki.hh  desktopDlg.cc  desktopDlg.hh  desktopSelectDlg.cc  desktopSelectDlg.hh  disclaimerDlg.cc  disclaimerDlg.hh  dlg.cc  dlg.hh  helpSupportDlg.cc  helpSupportDlg.hh  kioskWindow.cc  kioskWindow.hh  loginDlg.cc  loginDlg.hh  main.cc  mstsc.cc  mstsc.hh  passwordDlg.cc  passwordDlg.hh  prefs.cc  prefs.hh  rdesktop.cc  rdesktop.hh  rmks.cc  rmks.hh  scCertDetailsDlg.cc  scCertDetailsDlg.hh  scCertDlg.cc  scCertDlg.hh  scInsertPromptDlg.cc  scInsertPromptDlg.hh  scPinDlg.cc  (+9 more)
icons/: list_button_hover.h  list_button_normal.h  list_button_open.h
icons/open/: view.icns
icudata/: README
lib/gtm/: Makefile.inc  gtm.c
lib/libp11/: Makefile.inc
m4/: glib-gettext.m4
po/: ChangeLog  POTFILES.in  de.po  fr.po  ja.po  zh_CN.po
tunnel/: Makefile.inc  stubs.c  tunnel.cc  tunnelCocoa.m  tunnelMain.c  tunnelProxy.c  tunnelProxy.h
(+281 files in other folders)
